--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-test
+<html>
+
+<head>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <logo>CRUDE.MACHINES</logo>
+</body>
+
+<br/>
+
+<widget>
+    <title>
+        ALXING
+    </title>
+    <content>
+        ALXING is a 10hp motif generator creating a sequence of quantized CV values. The output can be clamped to a specific scale and the density of available notes can be reduced via the density parameter.
+    </content>
+</widget>
+
+</html>
