update for new firmware

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     </title>
     <content>
         ALXING is a 10hp motif generator creating a sequence of quantized CV values. The output can be clamped to a specific scale and the density of available notes can be reduced via the density parameter.
+        <br/><br/>
+        <a href="https://github.com/mightycoco/alxing/raw/master/firmware/alxing.1.1.120.zip">Firmware 1.1.120 beta HW1</a>
     </content>
 </widget>
 
