--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <content>
         ALXING is a 10hp motif generator creating a sequence of quantized CV values. The output can be clamped to a specific scale and the density of available notes can be reduced via the density parameter.
         <br/><br/>
-        <a href="https://github.com/mightycoco/alxing/releases/download/1.1.140121/alxing.1.1.140121.zip">Firmware 1.1.140121 beta HW1</a>
+        <a href="https://github.com/mightycoco/alxing/blob/master/firmware/alxing.1.1.04262021.zip">Firmware 1.1.04262021 beta HW1</a>
     </content>
 </widget>
 
