updates for grandau6

--- a/index.html
+++ b/index.html
@@ -2,16 +2,26 @@
 
 <head>
     <link rel="stylesheet" href="style.css">
+    <script type="text/javascript" src="page.js"></script>
 </head>
 
 <body>
-    <logo>CRUDE.MACHINES</logo>
+    <logo>(CRUDE.MACHINES)</logo>
 </body>
 
 <br/>
-
+<flex>
+    <nav>
+        <a href="#grandau.html">GRANDAU6</a>
+        <!--<a href="#alxing.html">ALXING</a>-->
+    </nav>
+    <page id="content">
+        ...
+    </page>
+</flex>
 <widget>
-    <title>
+    <!--
+        <title>
         ALXING
     </title>
     <content>
@@ -19,6 +29,7 @@
         <br/><br/>
         <a href="https://github.com/mightycoco/alxing/blob/master/firmware/alxing.1.1.04262021.zip">Firmware 1.1.04262021 beta HW1</a>
     </content>
+    -->
 </widget>
 
 </html>
