update module image style

--- a/pages/grandau.html
+++ b/pages/grandau.html
@@ -5,7 +5,7 @@
 </purpose>
 
 <description>
-    <img src="static/grandau6/grandau6.png" class="clickable"/>
+    <img src="static/grandau6/grandau6.png" class="clickable module"/>
     <p>GRANDAU6 is an active multipe with two channels in 4HE which can work stand alone or connected 
     together via a 4Pin Dupont/JST connector on the back.</p>
     
