--- a/pages/grandau.html
+++ b/pages/grandau.html
@@ -1,7 +1,7 @@
 <title>(GRANDAU6)</title>
 
 <purpose>
-    Active two channel, 6 way multiple expandable in master/slave configuration via pack-panel connection.
+    Active two channel, 6 way multiple expandable in master/slave configuration via back-panel connection.
 </purpose>
 
 <description>
