--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 <flex>
     <nav>
         <a href="#grandau.html">GRANDAU6</a>
-        <!--<a href="#alxing.html">ALXING</a>-->
+        <!--<a href="#alxing.html">ALXING</a>
+        <a href="#imp.html">impress</a>-->
     </nav>
     <page id="content">
         ...
