--- a/pages/alxing.html
+++ b/pages/alxing.html
@@ -1,10 +1,356 @@
 <title>(ALXING)</title>
 
 <purpose>
-    ALXING is a 10hp motif generator creating a sequence of quantized CV values. The output can be clamped to a specific scale and the density of available notes can be reduced via the density parameter.
+    <p>ALXING is a 10hp motif generator creating a sequence of quantized CV values. The output can be clamped to a
+        specific scale and the density of available notes can be reduced via the density parameter.</p>
 </purpose>
 <description>
-    tbd
-    <br/><br/>
+    <p>
+        The term for it is "Constrained Random CV Generator", but one can think of it as a Turing Machine on steroids.
+        It's designed to have good performance capabilities and also to bring additional functions with it, easing the
+        usage.
+    </p>
+
+    <p>
+        The quantiser for example makes it a lot more convenient to work with it melodically and the plethora of scales
+        let it spit out fresh tunes every time.
+        Also a clock with selectable subdivisions or different playmodes are build in to spice up the musical figures
+        just discovered, only to name a few.
+    </p>
+
+    <p>
+        Secondly the preset save and recall option comes in handy if one like to go back to known places within the
+        composition or use it to build a song like structure using saves sequences.</p>
+    </p>
+
+    <p>
+        Talking about Modulation.
+        Alxing implements cv-able main parameters and a freely routable MOD in- or output to interact with it's
+        compounds
+        even more deeply.
+        Don't miss out on this package of endless fun, steering through happy accidents and a landscape of motifs to
+        reveal.
+    </p>
+
+    <table>
+        <tr>
+            <td colspan="2" top>
+                Main Controls
+            </td>
+        </tr>
+        <tr>
+            <td left top><alt>(F!)</alt></td>
+            <td left top>
+                <dt>Pressing and holding the <alt>(F!)</alt> button and turning a potentiometer changes the alternative parameter of a knob.</dt>
+                <dt>Short Pressing the <alt>(F!)</alt> button opens the main menu.</dt>
+            </td>
+        </tr>
+        <tr>
+            <td left top>variation</td>
+            <td left top>
+                After reaching the end of the sequence defined by length, one of the following variations is applied
+                <dl>
+                    <dt>shift</dt>
+                    <dd>The sequence will be rolled to the right and a new random value will be fetched for the first step</dd>
+
+                    <dt>stp 100%</dt>
+                    <dd>All of the steps will receive a new random value</dd>
+
+                    <dt>stp 75%</dt>
+                    <dd>3/4th of the steps will receive a new random value</dd>
+
+                    <dt>stp 50%</dt>
+                    <dd>half of the steps will receive a new random value</dd>
+
+                    <dt>stp 20%</dt>
+                    <dd>1/4th of the steps will receive a new random value</dd>
+
+                    <dt>loop</dt>
+                    <dd>The sequence isn't changed and will loop forever</dd>
+
+                    <dt>seq 25%</dt>
+                    <dd>All steps get a new random value. Intensity of randomness is 0-25%</dd>
+
+                    <dt>seq 50%</dt>
+                    <dd>All steps get a new random value. Intensity of randomness is 0-50%</dd>
+
+                    <dt>seq 75%</dt>
+                    <dd>All steps get a new random value. Intensity of randomness is 0-75%</dd>
+
+                    <dt>seq 100%</dt>
+                    <dd>All steps get a new random value. Intensity of randomness is 0-100%</dd>
+                </dl>
+            </td>
+        </tr>
+        <tr>
+            <td left top>length<br/><alt>(SHIFT)</alt></td>
+            <td left top>
+                <dl>
+                    <dt>length</dt>
+                    <dd>Specify the length of the sequence (1-16)</dd>
+                </dl>
+                <dl>
+                    <dt><alt>(SHIFT)</alt></dt>
+                    <dd>Shift the start point of the sequence (NOT IMPLEMENTED)</dd>
+                </dl>
+            </td>
+        </tr>
+        <tr>
+            <td left top>range<br/><alt>(PLAYMODE)</alt></td>
+            <td left top>
+                <dl>
+                    <dt>range</dt>
+                    <dd>Specifies the range of octaves the random values are spread accross.</dd>
+                </dl>
+                <dl>
+                    <dt><alt>(PLAYMODE)</alt></dt>
+                    <dd>
+                        Selects the playmode of the sequence
+                        <ul>
+                            <li>Forward</li>
+                            <li>Backward</li>
+                        </ul>
+                    </dd>
+                </dl>
+            </td>
+        </tr>
+        <tr>
+            <td left top>density<br/><alt>(MOD)</alt></td>
+            <td left top></td>
+        </tr>
+        <tr>
+            <td left top>root<br/><alt>(SCALE)</alt></td>
+            <td left top></td>
+        </tr>
+        <tr>
+            <td left top>speed<br/><alt>(CLK)</alt></td>
+            <td left top></td>
+        </tr>
+    </table>
+
+    <br/>
+    <table>
+        <tr>
+            <td colspan="2">
+                Menu Structure
+            </td>
+        </tr>
+        <tr>
+            <td top left>Load</td>
+            <td top left></td>
+        </tr>
+        <tr>
+            <td top left>Save</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td top left>Clock</td>
+            <td></td>
+        </tr>
+    </table>
+
+    <br /><br />
     <a href="https://github.com/mightycoco/alxing/blob/master/firmware/alxing.1.1.04262021.zip">Firmware 1.1.04262021 beta HW1</a>
+    <br/>
+    <license>
+<h1>licenses</h1>
+<h2>alxing</h2>
+MIT License
+
+Copyright (c) 2020 crude.machines
+
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all
+copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+SOFTWARE.
+
+<h2>uClock</h2>
+MIT License
+
+Copyright (c) 2017 midilab
+
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all
+copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+SOFTWARE.
+
+<h2>MCP23017</h2>
+MIT License
+
+Copyright (c) 2017 Bertrand Lemasle
+
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all
+copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+SOFTWARE.
+
+<h2>I2C_EEPROM</h2>
+MIT License
+
+Copyright (c) 2011-2022 Rob Tillaart
+
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all
+copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+SOFTWARE.
+# arduino-timer
+Copyright (c) 2018, Michael Contreras
+All rights reserved.
+
+Redistribution and use in source and binary forms, with or without
+modification, are permitted provided that the following conditions are
+met:
+
+1. Redistributions of source code must retain the above copyright
+notice, this list of conditions and the following disclaimer.
+
+2. Redistributions in binary form must reproduce the above copyright
+notice, this list of conditions and the following disclaimer in the
+documentation and/or other materials provided with the distribution.
+
+3. Neither the name of the copyright holder nor the names of its
+contributors may be used to endorse or promote products derived from
+this software without specific prior written permission.
+
+THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS
+IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED
+TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A
+PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
+HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
+SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED
+TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR
+PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
+LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
+NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
+SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+
+<h2>Adafruit SSD1306</h2>
+Software License Agreement (BSD License)
+
+Copyright (c) 2012, Adafruit Industries
+All rights reserved.
+
+Redistribution and use in source and binary forms, with or without
+modification, are permitted provided that the following conditions are met:
+1. Redistributions of source code must retain the above copyright
+notice, this list of conditions and the following disclaimer.
+2. Redistributions in binary form must reproduce the above copyright
+notice, this list of conditions and the following disclaimer in the
+documentation and/or other materials provided with the distribution.
+3. Neither the name of the copyright holders nor the
+names of its contributors may be used to endorse or promote products
+derived from this software without specific prior written permission.
+
+THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS ''AS IS'' AND ANY
+EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
+WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
+DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER BE LIABLE FOR ANY
+DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
+(INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
+LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
+ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
+(INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
+SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+
+<h2>Adafruit GFX Library</h2>
+Software License Agreement (BSD License)
+
+Copyright (c) 2012 Adafruit Industries.  All rights reserved.
+
+Redistribution and use in source and binary forms, with or without
+modification, are permitted provided that the following conditions are met:
+
+- Redistributions of source code must retain the above copyright notice,
+  this list of conditions and the following disclaimer.
+- Redistributions in binary form must reproduce the above copyright notice,
+  this list of conditions and the following disclaimer in the documentation
+  and/or other materials provided with the distribution.
+
+THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
+AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
+IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
+ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE
+LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
+CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
+SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
+INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
+CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
+ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
+POSSIBILITY OF SUCH DAMAGE.
+
+<h2>Adafruit BusIO</h2>
+The MIT License (MIT)
+
+Copyright (c) 2017 Adafruit Industries
+
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all
+copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+SOFTWARE.
+    </license>
 </description>
