--- a/pages/alxing.html
+++ b/pages/alxing.html
@@ -150,7 +150,7 @@
     </table>
 
     <br /><br />
-    <a href="https://github.com/mightycoco/alxing/blob/master/firmware/alxing.1.1.04262021.zip">Firmware 1.1.04262021 beta HW1</a>
+    <a href="static/dl/alxing.1.8.17-05-2022.zip">Firmware 1.8.17-05-2022 HW rev 2.2</a>
     <br/>
     <license>
 <h1>licenses</h1>
