hide menu structure alxing

--- a/pages/alxing.html
+++ b/pages/alxing.html
@@ -129,7 +129,7 @@
     </table>
 
     <br/>
-    <table>
+    <!--<table>
         <tr>
             <td colspan="2">
                 Menu Structure
@@ -147,7 +147,7 @@
             <td top left>Clock</td>
             <td></td>
         </tr>
-    </table>
+    </table>-->
 
     <br /><br />
     <a href="static/dl/alxing.1.8.17-05-2022.zip">Firmware 1.8.17-05-2022 HW rev 2.2</a>
