alxing typos and image

--- a/pages/alxing.html
+++ b/pages/alxing.html
@@ -5,6 +5,7 @@
         specific scale and the density of available notes can be reduced via the density parameter.</p>
 </purpose>
 <description>
+    <img src="static/alxing/alxing.png" class="clickable module"/>
     <p>
         The term for it is "Constrained Random CV Generator", but one can think of it as a Turing Machine on steroids.
         It's designed to have good performance capabilities and also to bring additional functions with it, easing the
@@ -19,8 +20,8 @@
     </p>
 
     <p>
-        Secondly the preset save and recall option comes in handy if one like to go back to known places within the
-        composition or use it to build a song like structure using saves sequences.</p>
+        Secondly the preset save and recall option comes in handy if one likes to go back to known places within the
+        composition or use it to build a song like structure using saved sequences.</p>
     </p>
 
     <p>
