--- a/pages/alxing.html
+++ b/pages/alxing.html
@@ -63,7 +63,7 @@
                     <dt>stp 50%</dt>
                     <dd>half of the steps will receive a new random value</dd>
 
-                    <dt>stp 20%</dt>
+                    <dt>stp 25%</dt>
                     <dd>1/4th of the steps will receive a new random value</dd>
 
                     <dt>loop</dt>
@@ -108,8 +108,11 @@
                     <dd>
                         Selects the playmode of the sequence
                         <ul>
-                            <li>Forward</li>
-                            <li>Backward</li>
+                            <li>forward</li>
+                            <li>backward</li>
+                            <li>ping-pong</li>
+                            <li>drunk</li>
+                            <li>random</li>
                         </ul>
                     </dd>
                 </dl>
