--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <br/>
 <flex>
     <nav>
+        <a href="#home.html">HOME</a>
         <a href="#grandau.html">GRANDAU6</a>
         <a href="#alxing.html">ALXING</a>
         <!--<a href="#imp.html">impress</a>-->
