add contact, update home

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a href="#home.html">HOME</a>
         <a href="#grandau.html">GRANDAU6</a>
         <a href="#alxing.html">ALXING</a>
-        <!--<a href="#imp.html">impress</a>-->
+        <a href="#contact.html">contact</a>
     </nav>
     <page id="content">
         ...
