--- a/pages/home.html
+++ b/pages/home.html
@@ -6,6 +6,8 @@
 
 <description>
     <img src="static/title.jpg" class="clickable titleimg" width="300"/>
-    crude.machines developing modules for modular eurorack synthesizers
+    crude.machines developing modules for modular eurorack synthesizers. crude.machines modules are all 
+    designed and assambled in bavaria, germany. the modules naming scheme reflects crude.machines roots
+    and experiences.
 
 </description>
