updated title image and social links

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,6 +4,8 @@
 
     <a href="mailto:crude.machines@outlook.com">crude.machines@outlook.com</a>
 
+    <a href="https://www.facebook.com/CrudeMachines" target="fb:crude">https://www.facebook.com/CrudeMachines/</a>
+
     <a href="https://github.com/mightycoco?tab=repositories&q=&type=source&language=&sort=" target="github:mightycoco">https://github.com/mightycoco</a>
 
     <a href="https://www.youtube.com/channel/UCT-y0D081nKhvfazraO2CDw" target="UCT-y0D081nKhvfazraO2CDw">https://www.youtube.com</a>
