--- a/pages/home.html
+++ b/pages/home.html
@@ -1,11 +1,15 @@
 <title>(HOME)</title>
 
 <purpose>
-    crude.machines on <a href="https://www.youtube.com/channel/UCT-y0D081nKhvfazraO2CDw" target="UCT-y0D081nKhvfazraO2CDw">youtube</a>
+    crude.machines on <a href="https://www.youtube.com/channel/UCT-y0D081nKhvfazraO2CDw" target="UCT-y0D081nKhvfazraO2CDw">youtube</a> and <a href="https://www.facebook.com/CrudeMachines" target="fb:crude">facebook</a>
 </purpose>
 
 <description>
-    <img src="static/title.jpg" class="clickable titleimg" width="300"/>
+    <img src="static/grafing.png" width="500"/>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
     crude.machines developing modules for modular eurorack synthesizers. crude.machines modules are all 
     designed and assambled in bavaria, germany. the modules naming scheme reflects crude.machines roots
     and experiences.
