--- a/pages/alxing.html
+++ b/pages/alxing.html
@@ -154,10 +154,10 @@
     </table>-->
 
     <br /><br />
-    <a href="static/dl/alxing.1.9.22-06-2022.zip">Firmware 1.9.22-06-2022 HW rev 2.2</a>
+    <a href="static/alxing/alxing.1.91.29-06-2022.zip">Firmware 1.9.22-06-2022 HW rev 2.2</a>
     <br/>
     <releasenotes>
-        alxing 1.9
+        alxing 1.91
         - Improve clock timings
         - add new division modes
         1/8, 1/4, 1/3, 1/2, 1/1, 2/1, 3/1, 4/1, 8/1
