alxing update release notes

--- a/pages/alxing.html
+++ b/pages/alxing.html
@@ -157,6 +157,10 @@
     <a href="static/alxing/alxing.1.92.16-08-2022.zip">Firmware 1.92.16-08-2022 HW rev 2.2</a>
     <br/>
     <releasenotes>
+        alxing 1.92
+        - harden memory and I2C access
+        - set fuses on initial boot and after firmware upgrade
+
         alxing 1.91
         - Improve clock timings
         - add new division modes
