--- a/pages/alxing.html
+++ b/pages/alxing.html
@@ -154,9 +154,15 @@
     </table>-->
 
     <br /><br />
-    <a href="static/alxing/alxing.1.92.16-08-2022.zip">Firmware 1.92.16-08-2022 HW rev 2.2</a>
+    <a href="static/alxing/alxing.2.00.19-08-2022.zip">Firmware 2.00.19-08-2022 HW rev 2.2</a>
     <br/>
     <releasenotes>
+        alxing 2.00
+        - add eucledin trigger sequencer (long press F!)
+        - dim display in main view (undimmed when changing parameters)
+        - add screensaver (after 5 minutes of UI inactivity)
+        - increase precision of potentiometer assignments
+
         alxing 1.92
         - harden memory and I2C access
         - set fuses on initial boot and after firmware upgrade
